Dev: Use "overflow: inherit" to avoid dropdown creates scrollbar

--- a/hawk/app/assets/stylesheets/shared/_form.scss
+++ b/hawk/app/assets/stylesheets/shared/_form.scss
@@ -168,5 +168,5 @@ fieldset[disabled], fieldset[disabled]:active, fieldset[disabled]:focus,
 }
 
 .tab-pane .form-group {
-  overflow: auto;
+  overflow: inherit;
 }
